--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -137,7 +137,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="_Login"
-        android:textColor="@color/blue"
-        android:layout_gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:layout_gravity="bottom"
         />
 </LinearLayout>
