--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:background="@color/blue"
             android:text="_Navn"
+            android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_weight="50"
             />
@@ -53,6 +54,7 @@
             android:layout_height="match_parent"
             android:background="@color/blue"
             android:text="_Password"
+            android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_weight="50"
             />
@@ -85,6 +87,7 @@
             android:layout_height="match_parent"
             android:background="@color/blue"
             android:text="_Email"
+            android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_weight="50"
             />
@@ -117,6 +120,7 @@
             android:layout_height="match_parent"
             android:background="@color/blue"
             android:text="_Confirm email"
+            android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_weight="50"
             />
