--- a/app/src/main/res/layout/fragment_createuser.xml
+++ b/app/src/main/res/layout/fragment_createuser.xml
@@ -2,8 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingTop="24dp"
+        android:textSize="36dp"
+        android:textColor="@color/colorAccent"
+        android:text="_Opret bruger" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +27,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="@color/blue"
             android:gravity="center"
             android:text="_jeg er"
             android:textSize="18dp"
@@ -29,8 +36,7 @@
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/holo_orange_dark" />
+            android:layout_weight="1" />
 
         <Spinner
             android:id="@+id/userType"
@@ -42,7 +48,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/select_school_ll"
+        android:id="@+id/select_school_LL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -56,7 +62,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="@color/blue"
+
             android:gravity="center"
             android:text="_vælg Skole"
             android:textSize="18dp"
@@ -66,8 +72,7 @@
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/holo_orange_dark" />
+            android:layout_weight="1" />
 
         <Spinner
             android:id="@+id/school"
@@ -93,7 +98,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="@color/blue"
             android:gravity="center"
             android:text="_Vælg klasse"
             android:textSize="18dp"
@@ -103,8 +107,7 @@
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/holo_orange_dark" />
+            android:layout_weight="1" />
 
         <Spinner
             android:id="@+id/school_class"
@@ -119,7 +122,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="12dp"
+        android:paddingTop="18dp"
+        android:textSize="24dp"
+        android:textColor="@color/colorAccent"
         android:text="_Indtast bruger info her" />
 
     <ScrollView
@@ -132,303 +137,110 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <!--  create user first name -->
-            <LinearLayout
-                android:id="@+id/create_user_first_name_ll"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/create_user_first_name_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_fornavn"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/createUserFirstNameEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Navn input her"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
-
+                    android:id="@+id/create_user_first_name_Et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_first name" />
+            </android.support.design.widget.TextInputLayout>
             <!--  create user last name -->
-            <LinearLayout
-                android:id="@+id/create_user_last_name_ll"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/create_user_last_name_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_efternavn"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/createUserLastNameEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Navn input her"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
+                    android:id="@+id/create_user_last_name_Et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_last name" />
+            </android.support.design.widget.TextInputLayout>
 
             <!-- login password -->
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/create_user_password_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_Password"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/createUserPasswordEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Password input her"
-                    android:textColor="@color/black" />
+                    android:id="@+id/create_user_password_Et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_password" />
+            </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
             <!-- create user confirm password password -->
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/create_user_confirm_password_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_Password"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/createuUserConfirmPasswordEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Password input her"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
+                    android:id="@+id/create_user_confirm_password_Et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_type in password again" />
+            </android.support.design.widget.TextInputLayout>
 
             <!-- login email -->
-            <LinearLayout
-                android:id="@+id/create_user_email_ll"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/create_user_email_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_Email"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/loginEmailEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Email input her"
-                    android:textColor="@color/black" />
-
-            </LinearLayout>
+                    android:id="@+id/create_user_login_email_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_email"
+                    android:inputType="textEmailAddress" />
+            </android.support.design.widget.TextInputLayout>
 
             <!-- login confirm email -->
-            <LinearLayout
-                android:id="@+id/create_user_confirm_email_ll"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/create_user_confirm_email_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_Confirm email"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/loginEmailConfirmEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_confirm email input her"
-                    android:textColor="@color/black" />
-            </LinearLayout>
+                    android:id="@+id/create_user_login_email_confirm_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_type in email again"
+                    android:inputType="textEmailAddress" />
+            </android.support.design.widget.TextInputLayout>
 
             <!--  create user authcode -->
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
                 android:id="@+id/create_user_auth_code_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_AuthCode"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/createUserAuthCodeEt"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Navn input her"
-                    android:textColor="@color/black" />
+                    android:id="@+id/create_user_auth_code_Et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_auth code" />
+            </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
             <!--  create user authcode validation -->
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
                 android:id="@+id/create_user_auth_code_validation_LL"
                 android:layout_width="match_parent"
-                android:layout_height="96dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingTop="48dp"
-                android:weightSum="6">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="3"
-                    android:background="@color/blue"
-                    android:text="_AuthCode validation"
-                    android:textColor="@color/black"
-                    android:textSize="18dp" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_orange_dark" />
+                android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/create_user_auth_code_validation_Et"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="@color/yellow"
-                    android:text="_Navn input her"
-                    android:textColor="@color/black" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="_validation auth code" />
+            </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
