--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -2,29 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/yellow"
+    android:background="@drawable/main_app_background"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/news_titel"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="_news fragment"
-        android:textColor="@color/green"
-        android:textSize="24dp">
+        >
     </TextView>
     <ImageView
         android:id="@+id/news_feed_picture"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#F00"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        />
     <TextView
-        android:id="@+id/news_main_text"
+        android:id="@+id/news_feed_text"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="_news fragment"
-        android:textColor="@color/blue"
-        android:textSize="24dp">
+        >
     </TextView>
 
 </LinearLayout>
