--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0099ff</color>
-    <color name="colorPrimaryDark">#000099</color>
-    <color name="colorAccent">#333399</color>
+    <color name="colorPrimary">#ff99ff</color>
+    <color name="colorPrimaryDark">#05ff99</color>
+    <color name="colorAccent">#ff3399</color>
 
     <color name="yellow">#f5e747</color>
     <color name="blue">#0000ff</color>
