--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -1,42 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/appBackgroundColor">
 
-    <TextView
-        android:id="@+id/news_detail_title"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingBottom="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/news_detail_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingLeft="8dp"
+                android:text="_title"
+                android:textColor="@color/colorPrimary"
+                android:textSize="48dp" />
+
+            <TextView
+                android:id="@+id/news_detail_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:paddingLeft="8dp"
+                android:paddingBottom="8dp"
+                android:text="Skrevet af: _author" />
+
+            <ImageView
+                android:id="@+id/news_detail_picture"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:src="@drawable/ic_menu_send" />
+
+            <TextView
+                android:id="@+id/news_detail_picture_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:paddingLeft="8dp"
+                android:text="_picture text"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/news_detail_headline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:paddingLeft="8dp"
+                android:text="_Headline"
+                android:textSize="36dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/news_detail_main_text"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:paddingLeft="8dp"
+                android:text="_main text"
+                android:textSize="16dp" />
+
+
+        </LinearLayout>
+    </ScrollView>
+    <Button
+        android:id="@+id/news_detail_back_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/yellow"
-        android:text="_title"
-        android:gravity="center"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:src="@drawable/ic_menu_send"
-        android:background="@color/blue"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
+        android:background="@color/colorAccent"
+        android:text="Tilbage"
         />
-
-    <TextView
-        android:id="@+id/news_detail_main_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/green"
-        android:text="_main text"
-        android:textSize="36dp"/>
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
