visual updates mangler stadig at vælge grundfarver. pink og turkish er måske liiiige i overkanten

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,9 @@
             android:id="@+id/news_list"
             android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:dividerHeight="0dp">
         </ListView>
     </LinearLayout>
 
