--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -1,83 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/appBackgroundColor"
     android:orientation="vertical"
-    android:background="@color/appBackgroundColor">
+    android:padding="16dp">
 
-    <ScrollView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        android:paddingBottom="16dp">
+        android:background="@color/newsItemBackgroundColor"
+        card_view:cardCornerRadius="20dp">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp">
 
-            <TextView
-                android:id="@+id/news_detail_title"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingLeft="8dp"
-                android:text="_title"
-                android:textColor="@color/colorPrimary"
-                android:textSize="48dp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/news_detail_author"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:paddingLeft="8dp"
-                android:paddingBottom="8dp"
-                android:text="Skrevet af: _author" />
+                <TextView
+                    android:id="@+id/news_detail_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
+                    android:text="_title"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="48dp" />
 
-            <ImageView
-                android:id="@+id/news_detail_picture"
-                android:layout_width="match_parent"
-                android:layout_height="360dp"
-                android:src="@drawable/ic_menu_send" />
+                <TextView
+                    android:id="@+id/news_detail_author"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingBottom="8dp"
+                    android:paddingLeft="8dp"
+                    android:text="Skrevet af: _author" />
 
-            <TextView
-                android:id="@+id/news_detail_picture_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:paddingLeft="8dp"
-                android:text="_picture text"
-                android:textStyle="italic" />
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    card_view:cardCornerRadius="8dp">
 
-            <TextView
-                android:id="@+id/news_detail_headline"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:paddingLeft="8dp"
-                android:text="_Headline"
-                android:textSize="36dp"
-                android:textStyle="bold" />
+                    <ImageView
+                        android:id="@+id/news_detail_picture"
+                        android:layout_width="match_parent"
+                        android:layout_height="360dp"
+                        android:src="@drawable/ic_menu_send" />
+                </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/news_detail_main_text"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:paddingLeft="8dp"
-                android:text="_main text"
-                android:textSize="16dp" />
+                <TextView
+                    android:id="@+id/news_detail_picture_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="8dp"
+                    android:text="_picture text"
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/news_detail_headline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:paddingLeft="8dp"
+                    android:text="_Headline"
+                    android:textSize="36dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/news_detail_main_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:paddingLeft="8dp"
+                    android:text="_main text"
+                    android:textSize="16dp" />
 
 
-        </LinearLayout>
-    </ScrollView>
-    <Button
-        android:id="@+id/news_detail_back_button"
+            </LinearLayout>
+        </ScrollView>
+    </android.support.v7.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="18dp" />
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:text="Tilbage"
-        />
+        android:layout_gravity="center_horizontal"
+        android:padding="8dp"
+        card_view:cardCornerRadius="8dp">
+
+
+        <Button
+            android:id="@+id/news_detail_back_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:text="Tilbage" />
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
