--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,32 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/appBackgroundColor"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/news_titel"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="_news fragment"
-        >
-    </TextView>
-    <ImageView
-        android:id="@+id/news_feed_picture"
-        android:layout_gravity="center_horizontal"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-
-        />
-    <TextView
-        android:id="@+id/news_feed_text"
-        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="_feed text"
-        >
-    </TextView>
+        card_view:cardCornerRadius="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@color/newsItemBackgroundColor"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/news_titel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:text="_news fragment"
+                android:textAlignment="center">
+
+            </TextView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                card_view:cardCornerRadius="8dp">
+
+                <ImageView
+                    android:id="@+id/news_feed_picture"
+                    android:layout_width="330dp"
+                    android:layout_height="220dp" />
+            </android.support.v7.widget.CardView>
+
+
+            <TextView
+                android:id="@+id/news_feed_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingBottom="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="8dp"
+                android:text="_feed text"
+                android:textAlignment="center"></TextView>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
