--- a/app/src/main/res/layout/activity_commercial_detail.xml
+++ b/app/src/main/res/layout/activity_commercial_detail.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+    <TextView
+        android:id="@+id/commercial_detail_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="_Title"/>
+
+    <ImageView
+        android:id="@+id/commercial_detail_picture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_menu_camera"/>
+
+    <TextView
+        android:id="@+id/commercial_detail_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="_text"/>
 
 </LinearLayout>
