--- a/app/src/main/res/layout/item_chat_name.xml
+++ b/app/src/main/res/layout/item_chat_name.xml
@@ -6,6 +6,7 @@
     <TextView
         android:id="@+id/chat_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/newsItemBackgroundColor"/>
 
 </LinearLayout>
